// -----------------------------------------------------------------------------
// Copyright 2018 Frank V. Castellucci and Arthur Greef
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";
option java_multiple_files = true;
option java_package = "hashblock.asset.protobuf";

// On chain unit of measure

message Unit {
    string system = 1;
    string key = 2;
    string value = 3;
}

// On chain resource

message Resource {
    string system = 1;
    string key = 2;
    string value = 3;
    string sku = 4;
}

// Asset Payload
// - Contains either a proposal or a vote.

message AssetPayload {
    // The action indicates data is contained within this payload
    enum Action {
        ACTION_UNSET = 0;

        // A proposal action - data will be a AssetProposal
        ACTION_PROPOSE = 1;

        // A vote action - data will be a AssetVote
        ACTION_VOTE = 2;
    }
    // The action of this payload
    Action action = 1;

    // The dimension for the asset
    string dimension = 2;

    // The content of this payload
    bytes data = 3;
}

// Asset Proposal
//
// This message proposes an Asset.

message AssetProposal {
    enum Type {
        UNIT = 0;
        RESOURCE = 1;
    }

    // The asset being proposed will be either Unit or Resource
    bytes asset = 1;

    // It's asset type identifier
    Type type = 2;

    // allow duplicate proposals with different hashes
    // randomly created by the client

    string nonce = 3;
}

// Asset Vote
//
// This message votes on Asset Proposal

message AssetVote {
    enum Vote {
        VOTE_UNSET = 0;
        VOTE_ACCEPT = 1;
        VOTE_REJECT = 2;
    }

    // The id of the proposal being voted on

    string proposal_id = 1;

    Vote vote = 2;
}


// Contains the vote counts for a given proposal.

message AssetCandidate {
    // An individual vote record
    message VoteRecord {
        enum Vote {
            VOTE_UNSET = 0;
            VOTE_ACCEPT = 1;
            VOTE_REJECT = 2;
        }
        // The public key of the voter
        string public_key = 1;

        // The voter's actual vote
        Vote vote = 2;

    }

    // The proposal id, a hash of the original proposal
    string proposal_id = 1;

    // The active proposal itself
    AssetProposal proposal = 2;

    // list of votes
    repeated VoteRecord votes = 3;
}

// Contains all the setting candiates up for vote.

message AssetCandidates {
    repeated AssetCandidate candidates = 1;
}

