// -----------------------------------------------------------------------------
// Copyright 2018 Frank V. Castellucci
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";
option java_multiple_files = true;
option java_package = "hashblock.setting.protobuf";

// The following is a portion of the sawtooth-settings proto buff file
// for the ability for us to generate settings in the genesis batch.
// THIS IS TEMPORARY UNTIL THE SAWTOOTH TEAM PACKAGES IN SDK

// Setting Payload
// - Contains either a proposal or a vote.
message SettingsPayload {
    // The action indicates data is contained within this payload
    enum Action {
        ACTION_UNSET = 0;

        // A proposal action - data will be a SettingProposal
        PROPOSE = 1;

        // A vote action - data will be a SettingVote
        VOTE = 2;
    }
    // The action of this payload
    Action action = 1;

    // The content of this payload
    bytes data = 2;
}

// Setting Proposal
//
// This message proposes a change in a setting value.
message SettingProposal {
    // The setting key.  E.g. sawtooth.config.authorization_type
    string setting = 1;

    // The setting value. E.g. 'ballot'
    string value = 2;

    // allow duplicate proposals with different hashes
    // randomly created by the client
    string nonce = 3;
}
